--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dua 9 - Dua Sharing</title>
+  <title>Dua 1 - Dua Sharing</title>
 </head>
 <body>
   <a id="manualLink" href="#" target="_blank" style="display:none;">Open WhatsApp</a>
@@ -13,37 +13,33 @@
 
 This powerful dua calls upon Allah ﷻ — Malik-ul-Quddus (The King, The Most Pure) — to cleanse our heart from all anger, jealousy, arrogance, and unlawful desires. It nurtures noble character — the kind that draws you closer to Allah ﷻ and His beloved Messenger, Rasulullah ﷺ.
 
-It asks for inner purification and noble character, inspired by the most perfect human being to ever walk the earth: Khayr-ul-Khalqillah, Rasulullah ﷺ.
+*The Duʿāʾ:*  
 
-For when the heart is purified, the soul begins to shine — dressed with Divine light, blessings, and honor.
+Ya Allah (O Allah), Ya Malikul Quddus (O King, the Most Pure), grant us hearts that are pure and sound, free from all anger, malice, jealousy, envy, arrogance, pride, unlawful lust, and greed. Adorn us with the best and most noble character, inspired by Your beloved, Habeebullah, Sultan-ul-Anbiya, Rasoolullah, Sayyidina Muhammad Sallallahu Alayhi Wasallam. Fill our hearts with a deep and unwavering love for him. Let this love purify our desires, guide our intentions, and transform our actions into those that are beloved and pleasing to You and Your beloved.
 
-As Prophet Muhammad ﷺ said:
+This duʿāʾ is part of the *Supplication of Infinite Blessings* — a growing chain of heartfelt duʿāʾs shared by countless believers like you, worldwide.
 
-“The most beloved to me and the closest to me on the Day of Judgment are those with the best character.” (Tirmidhi)
+And because in an authentic hadith reported by Muʿādh ibn Anas (ra), Rasulullah ﷺ encouraged us to share beneficial knowledge, I humbly ask that you please forward this message far and wide — it only takes a few seconds, and your sharing can start a chain of duʿāʾs that continue returning to you from everyone it reaches.
 
-*Ya Allah (O Allah), Ya Malikul Quddus (O King, the Most Pure), grant us hearts that are pure and sound, free from all anger, malice, jealousy, envy, arrogance, pride, unlawful lust, and greed. Adorn us with the best and most noble character, inspired by Your beloved, Habeebullah, Sultan-ul-Anbiya, Rasoolullah, Sayyidina Muhammad Sallallahu Alayhi Wasallam. Fill our hearts with a deep and unwavering love for him. Let this love purify our desires, guide our intentions, and transform our actions into those that are beloved and pleasing to You and Your beloved.*
+When you share this message, you’re not simply sharing a duʿāʾ. You’re opening the door to countless people making sincere duʿāʾ for you daily — with the Malaika (Angels) themselves saying *“Ameen”* to every single one.
 
-This dua is part of *The Supplication of Infinite Blessings* — a powerful collection of heartfelt supplications designed to benefit you in both this life and the next. 
+For detailed information on this and the full *Supplication of Infinite Blessings* in both (English + Arabic) visit: https://www.duasharing.com/
 
-*At Dua Sharing, our mission is simple*: 
+I make duʿāʾ that Allah accepts it from you, and reward you for all those it reaches through you.
 
-To encourage sincere dua, meaningful sharing, and to multiply blessings through a growing global chain of people making dua for one another every single day.
+*Ameen.*`;
 
-As Rasulullah ﷺ said: 
+    const fallbacks = {
+      'ﷻ': 'ﷻ',
+      'ﷺ': 'ﷺ'
+    };
 
-“The supplication of a Muslim for his brother in his absence will certainly be answered. Every time he makes a supplication for good for his brother, the angel appointed for this task says: ‘Ameen! And may it be for you too.”
+    let messageWithFallback = message;
+    for (const [symbol, replacement] of Object.entries(fallbacks)) {
+      messageWithFallback = messageWithFallback.replace(new RegExp(symbol, 'g'), replacement);
+    }
 
-Every post we share is taken directly from the full Supplication of Infinite Blessings — with the aim of moving hearts, inspiring action, and reminding us all of what truly matters.
-
-Access the full supplication in both English and Arabic at: https://www.duasharing.com
-
-When you share this post, you’re not simply sharing a dua. You’re opening the door to millions of people making sincere dua for you — with the Malaika (Angels) themselves saying “Ameen” to every single one.
-
-May Allah accept it from you, and reward you for all those it reaches through you.
-
-Ameen`;
-
-    const encodedText = encodeURIComponent(message);
+    const encodedText = encodeURIComponent(messageWithFallback);
     const waProtocol = "whatsapp://send?text=" + encodedText;
     const waWeb = "https://wa.me/?text=" + encodedText;
 
@@ -53,7 +49,7 @@ Ameen`;
     async function tryShare() {
       try {
         if (navigator.share) {
-          await navigator.share({ text: message });
+          await navigator.share({ text: messageWithFallback });
         } else {
           window.location.href = waProtocol;
           setTimeout(() => { window.location.href = waWeb; }, 1200);
@@ -67,4 +63,3 @@ Ameen`;
   </script>
 </body>
 </html>
-
