--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dua 1 - Dua Sharing</title>
+  <title>Dua 9 - Dua Sharing</title>
 </head>
 <body>
   <a id="manualLink" href="#" target="_blank" style="display:none;">Open WhatsApp</a>
@@ -11,23 +11,23 @@
   <script>
     const message = `*Ya Allah… Purify my heart*
 
-This powerful dua calls upon Allah ﷻ — Malik-ul-Quddus (The King, The Most Pure) — to cleanse our heart from all anger, jealousy, arrogance, and unlawful desires. It nurtures noble character — the kind that draws you closer to Allah ﷻ and His beloved Messenger, Rasulullah ﷺ.
+Pause for a moment, turn your heart sincerely toward Allah, and read this short duʿāʾ for a pure heart and good character. Then forward it to 5 people to earn ongoing reward and duʿā.
 
-*The Duʿāʾ:*  
+*Niyyah*:
+
+I intend this recitation of this du'a for myself, the compilers, the sharers, and the recipients.
+
+*The Duʿāʾ*:
 
 Ya Allah (O Allah), Ya Malikul Quddus (O King, the Most Pure), grant us hearts that are pure and sound, free from all anger, malice, jealousy, envy, arrogance, pride, unlawful lust, and greed. Adorn us with the best and most noble character, inspired by Your beloved, Habeebullah, Sultan-ul-Anbiya, Rasoolullah, Sayyidina Muhammad Sallallahu Alayhi Wasallam. Fill our hearts with a deep and unwavering love for him. Let this love purify our desires, guide our intentions, and transform our actions into those that are beloved and pleasing to You and Your beloved.
 
-This duʿāʾ is part of the *Supplication of Infinite Blessings* — a growing chain of heartfelt duʿāʾs shared by countless believers like you, worldwide.
+Because of the niyyah, when others recite this after you share it, you are included in their duʿāʾ. They will be praying for your heart to be purified and your character to be adorned with noble qualities too.
 
-And because in an authentic hadith reported by Muʿādh ibn Anas (ra), Rasulullah ﷺ encouraged us to share beneficial knowledge, I humbly ask that you please forward this message far and wide — it only takes a few seconds, and your sharing can start a chain of duʿāʾs that continue returning to you from everyone it reaches.
+This is 1 of 23 supplications from *The Supplication of Infinite Blessings*.
 
-When you share this message, you’re not simply sharing a duʿāʾ. You’re opening the door to countless people making sincere duʿāʾ for you daily — with the Malaika (Angels) themselves saying *“Ameen”* to every single one.
+*Take a few seconds now and forward this to at least 5 people* — so the reward of spreading goodness increases for you, and duʿāʾs continue to be made for you with every sincere recitation.
 
-For detailed information on this and the full *Supplication of Infinite Blessings* in both (English + Arabic) visit: https://www.duasharing.com/
-
-I make duʿāʾ that Allah accepts it from you, and reward you for all those it reaches through you.
-
-*Ameen.*`;
+Find the full Supplication of Infinite Blessings in both English and Arabic at: https://www.duasharing.com/`;
 
     const fallbacks = {
       'ﷻ': 'ﷻ',
@@ -63,3 +63,4 @@ I make duʿāʾ that Allah accepts it from you, and reward you for all those it 
   </script>
 </body>
 </html>
+
